# SciCalc

./: .gitignore  CMakeLists.txt  Readme.md
src/: SciCalc.c  arithmetic.c  exponent.c  factorial.c  matrix.c
src/include/: SciCalc.h  arithmetic.h  exponent.h  factorial.h
